--- a/arch/arm/configs/m7_defconfig
+++ b/arch/arm/configs/m7_defconfig
@@ -2378,6 +2378,7 @@ CONFIG_MSM_KGSL_MAINLINE=y
 # CONFIG_MSM_KGSL_JB_MR1 is not set
 # CONFIG_MSM_KGSL_JB_REL_RB31 is not set
 # CONFIG_MSM_KGSL_GPU_USAGE is not set
+CONFIG_MSM_KGSL_SIMPLE_GOV=y
 # CONFIG_MSM_KGSL_CFF_DUMP is not set
 # CONFIG_MSM_KGSL_PSTMRTMDMP_CP_STAT_NO_DETAIL is not set
 # CONFIG_MSM_KGSL_PSTMRTMDMP_NO_IB_DUMP is not set
