--- a/arch/arm/configs/m7_defconfig
+++ b/arch/arm/configs/m7_defconfig
@@ -492,6 +492,7 @@ CONFIG_HAVE_ARCH_HAS_CURRENT_TIMER=y
 CONFIG_MSM_HSIC_SYSMON=y
 CONFIG_MACH_M7_UL=y
 CONFIG_MACH_M7_U=y
+CONFIG_FORCE_FAST_CHARGE=y
 
 #
 # System MMU
